correct pointer increment error

--- a/assembler/Makefile
+++ b/assembler/Makefile
@@ -6,7 +6,7 @@
 #    By: mhouppin <marvin@le-101.fr>                +:+   +:    +:    +:+      #
 #                                                  #+#   #+    #+    #+#       #
 #    Created: 2019/02/25 16:43:57 by mhouppin     #+#   ##    ##    #+#        #
-#    Updated: 2019/07/12 16:14:28 by fcordon     ###    #+. /#+    ###.fr      #
+#    Updated: 2019/08/05 11:50:53 by fcordon     ###    #+. /#+    ###.fr      #
 #                                                          /                   #
 #                                                         /                    #
 # **************************************************************************** #
@@ -20,7 +20,7 @@ SOURCES  := $(wildcard ${SRC_DIR}/*.c)
 OBJECTS  := $(patsubst ${SRC_DIR}/%.c,${OBJ_DIR}/%.o,${SOURCES})
 DEPENDS  := $(patsubst ${SRC_DIR}/%.c,${OBJ_DIR}/%.d,${SOURCES})
 OBJECTS  += vector/vector.o
-CFLAGS   ?= -Wextra -Wall -g -O3
+CFLAGS   ?= -Wextra -Wall -g3
 CINC     := -I $(subst :, -I ,${INC_DIR})
 CC       ?= gcc-9
 
