--- a/assembler/Makefile
+++ b/assembler/Makefile
@@ -6,7 +6,7 @@
 #    By: mhouppin <marvin@le-101.fr>                +:+   +:    +:    +:+      #
 #                                                  #+#   #+    #+    #+#       #
 #    Created: 2019/02/25 16:43:57 by mhouppin     #+#   ##    ##    #+#        #
-#    Updated: 2019/08/05 11:50:53 by fcordon     ###    #+. /#+    ###.fr      #
+#    Updated: 2019/08/09 12:58:59 by fcordon     ###    #+. /#+    ###.fr      #
 #                                                          /                   #
 #                                                         /                    #
 # **************************************************************************** #
@@ -19,7 +19,6 @@ INC_DIR   = includes:vector
 SOURCES  := $(wildcard ${SRC_DIR}/*.c)
 OBJECTS  := $(patsubst ${SRC_DIR}/%.c,${OBJ_DIR}/%.o,${SOURCES})
 DEPENDS  := $(patsubst ${SRC_DIR}/%.c,${OBJ_DIR}/%.d,${SOURCES})
-OBJECTS  += vector/vector.o
 CFLAGS   ?= -Wextra -Wall -g3
 CINC     := -I $(subst :, -I ,${INC_DIR})
 CC       ?= gcc-9
@@ -40,12 +39,14 @@ $(OBJ_DIR):
 $(NAME): $(OBJECTS)
 	$(CC) $(CFLAGS) -o $@ $^ $(ARCHIVE)
 
+
 # Creation des .o
 $(OBJ_DIR)/%.o: $(SRC_DIR)/%.c
 	$(CC) $(CFLAGS) $(CINC) -c $< -o $@
 
-vector/%.o: vector/%.c
-	$(CC) $(CFLAGS) $(CINC) -c -MMD $< -o $@
+#vector/%.o: vector/%.c
+#	$(CC) $(CFLAGS) $(CINC) -c -MMD $< -o $@
+#	$(CC) $(CFLAGS) $(CINC) -c $< -o $@
 
 # inclusion des regles contenues dans les .d
 -include $(DEPENDS)
