--- a/assembler/router/Makefile
+++ b/assembler/router/Makefile
@@ -6,10 +6,10 @@
 #    By: fcordon <fcordon@le-101.fr>                +:+   +:    +:    +:+      #
 #                                                  #+#   #+    #+    #+#       #
 #    Created: 2019/08/27 14:12:43 by fcordon      #+#   ##    ##    #+#        #
-#    Updated: 2019/08/29 10:30:05 by fcordon     ###    #+. /#+    ###.fr      #
+#    Updated: 2019/09/12 15:36:22 by fcordon     ###    #+. /#+    ###.fr      #
 #                                                          /                   #
 #                                                         /                    #
 # **************************************************************************** #
 
 all: router.c
-	gcc router.c -o ../gbasm_router
+	gcc router.c -o ../gbasm -g3 -fsanitize=address
